Skip neo4j, just return something from server

--- a/views/index.html
+++ b/views/index.html
@@ -84,7 +84,7 @@
         $(document).ready(function(){
             console.log("document.ready()");
             $.ajax({
-                 url:"getpeople/Josef",
+                 url:"getpeople/Donald",
                  dataType: 'jsonp', // Notice! JSONP <-- P (lowercase)
                  success:function(json){
                     console.log("ajax.success()");
