--- a/public/stylesheets/styleAdvanced.css
+++ b/public/stylesheets/styleAdvanced.css
@@ -1,6 +1,7 @@
 html{
 	height: 100%;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	background: #FFF; /* So it can be used as iframe on portfolio web site */
 }
 
 a{
