Changed search input from swedish to english, had to make search bar smaller

--- a/views/advanced.html
+++ b/views/advanced.html
@@ -121,8 +121,8 @@
 <body id="main">
     <div id="side-bar">
         <form id="searchPerson" onsubmit="searchPerson(); return false;">
-            <input id="search-text" type="search" name="personName" placeholder="Sök efter en person...">
-            <input type="submit" value="Sök">
+            <input id="search-text" type="search" name="personName" placeholder="Search for someone...">
+            <input type="submit" value="Search">
         </form>
         <div id="mini-tree"></div>
         <div id="portrait-section"></div>
