Changed from Donald Duck to Homer theme. Changed neo4j database contents

--- a/views/advanced.html
+++ b/views/advanced.html
@@ -86,7 +86,7 @@
 
         $(function(){
             $.ajax({
-                 url:"getpeople/Donald",
+                 url:"getpeople/Clancy",
                  dataType: 'jsonp', // Notice! JSONP <-- P (lowercase)
                  success:function(json){
                     console.log("getpeople: ajax.success()");
